# ECE656ProjectHRTScpp

./: CMakeLists.txt  databaseConnection.cpp  databaseConnection.h  database_creation.sql  main.cpp  ratingPredictionTrain.py
DatabaseClasses/: Forum.cpp  Forum.h  Post.cpp  Post.h  Thread.cpp  Thread.h  User.cpp  User.h  socialNetworkBase.h
DatabaseHandling/: credentialsGenerator.cpp  credentialsGenerator.h  databaseConnection.cpp  databaseConnection.h  forumsMaker.cpp  forumsMaker.h  recommendationEngine.cpp  recommendationEngine.h
UXNavigation/: Navigation.cpp  Navigation.h
Utility/: setHandling.cpp  setHandling.h
